<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mpvStyle"
    android:id="@+id/swipe"
    tools:context=".MainActivity">

    <LinearLayout style="@style/mpvbStyle">

        <include layout="@layout/toolbar" />


        <Button
            style="@style/buttonStyle"
            android:onClick="SpinClick"

            android:text="@string/spin" />

        <Button
            style="@style/buttonStyle"
            android:drawableStart="@drawable/redeem_icon"
            android:onClick="redeemClick"

            android:text="@string/redeem" />

        <Button
            style="@style/buttonStyle"
            android:drawableStart="@drawable/policy_icon"
            android:onClick="policyClick"
            android:text="@string/privacy_policy" />

        <Button
            style="@style/buttonStyle"
            android:drawableStart="@drawable/ic_baseline_share_24"
            android:onClick="shareClick"
            android:text="@string/share_app" />

        <Button
            style="@style/buttonStyle"
            android:drawableStart="@drawable/exit_icon"
            android:onClick="exitClick"
            android:text="@string/exit" />
    </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>